fix(comment): added message field to validation response
