# backend/docs/swagger.json
@@ -64,10 +64,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -161,10 +158,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -290,10 +284,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/post.Response"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -561,10 +552,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -704,10 +692,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -858,10 +843,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -945,10 +927,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -1024,10 +1003,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -1125,10 +1101,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -1228,10 +1201,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -1320,10 +1290,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -1437,10 +1404,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -1538,10 +1502,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/post.Response"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -1663,10 +1624,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -1754,10 +1712,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -1822,10 +1777,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -1911,10 +1863,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
+                                            "$ref": "#/definitions/validator.Response"
                                         }
                                     }
                                 }
@@ -2382,6 +2331,20 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "validator.Response": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "validation_errors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/validator.ResponseError"
+                    }
                 }
             }
         },
