# backend/internal/controller/http/auth.go
@@ -54,7 +54,7 @@ func (r *Router) refreshTokenMiddleware() fiber.Handler {
 //	@Produce		json
 //	@Param			request	body		user.Login	true	"User"
 //	@Success		200		{object}	model.Response
-//	@Failure		422		{object}	model.Response{data=[]validator.ResponseError}
+//	@Failure		422		{object}	model.Response{data=validator.Response}
 //	@Failure		400		{object}	model.Response
 //	@Failure		401		{object}	model.Response
 //	@Failure		500		{object}	model.Response
@@ -116,7 +116,7 @@ func getPhotoBytes(photo *multipart.FileHeader) (*[]byte, error) {
 //	@Param			photo		formData	file	false	"Photo"
 //	@Success		201			{object}	any
 //	@Failure		400			{object}	model.Response
-//	@Failure		422			{object}	model.Response{data=[]validator.ResponseError}
+//	@Failure		422			{object}	model.Response{data=validator.Response}
 //	@Failure		500			{object}	model.Response
 //	@Router			/auth/signup [post]
 func (r *Router) signup(ctx *fiber.Ctx) error {
